Fixed Rt description aligning; deleted image

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .tableDiscussionImgContainer {
@@ -22,9 +23,9 @@
 }
 
 .rtMapContainer {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 84%;
+    margin-left: 8%;
+    margin-right: 8%;
     box-sizing: border-box;
     background-color: #ebebeb;
     border-radius: 20px;
